# amplifier-module-hooks-redaction

./: pyproject.toml
amplifier_module_hooks_redaction/: __init__.py
tests/: test_patterns.py  test_redaction.py
