[project]
name = "amplifier-module-hooks-redaction"
version = "0.1.0"
description = "Redaction hook for Amplifier (secrets/PII scrubbing)"
license = "MIT"
requires-python = ">=3.11"
authors = [
    { name = "Microsoft MADE:Explorations Team" },
]

[project.entry-points."amplifier.modules"]
hooks-redaction = "amplifier_module_hooks_redaction:mount"

[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[tool.uv]
package = true

[tool.uv.sources]
amplifier-core = { path = "../amplifier-core", editable = true }

[tool.hatch.build.targets.wheel]
packages = [
    "amplifier_module_hooks_redaction",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--import-mode=importlib"
asyncio_mode = "strict"

[dependency-groups]
dev = [
    "amplifier-core",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
]

